--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -30,7 +30,13 @@
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
-            <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
+            <span class="text-danger">
+              <%= fa_icon 'lock'%></span>
+              <% if current_user %>
+                Signed in as <%= current_user.first_name %> | <%=link_to "Logout", '/logout'%>
+                <% else %>
+                  <%= link_to "Login", "/login"%> | <% link_to "Register", "/users/new" %>
+              <% end %>
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
