--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,9 +22,13 @@
   <br />
 
   <%= form.label :password %>
-  <%= form.text_field :password_digest %>
+  <%= form.password_field :password %>
 
-  <%= form.label :confirm_password %>
-  <%= form.text_field :password %>
+  <%= form.label :password_confirmation %>
+  <%= form.password_field :password_confirmation %>
+
+  <br />
+
+  <%= form.submit :submit %>
 
 <% end %>
