--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -33,9 +33,9 @@
             <span class="text-danger">
               <%= fa_icon 'lock'%></span>
               <% if current_user %>
-                Signed in as <%= current_user.first_name %> | <%=link_to "Logout", '/logout'%>
+                <span>Signed in as <%= current_user.first_name %> | <%=link_to "Logout", '/logout'%> </span>
                 <% else %>
-                  <%= link_to "Login", "/login"%> | <% link_to "Register", "/users/new" %>
+                  <span><%= link_to "Login", "/login"%> | <% link_to "Register", "/users/new" %> </span>
               <% end %>
             <span class="caret"></span>
           </a>
