--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,10 +1,9 @@
 <h1>All Categories</h1>
 
-<ul>
+<table class="table">
   <% @categories.each do |category| %>
-    <li>
-      <%= category.name %>
-    </li>
+    <tr>
+      <td> <%= category.name %> </td>
+    </tr>
   <% end %>
-
-</ul>
+</table>
