--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,8 +1,10 @@
-<h1> Create a new Catagory!</h1>
+<h1 class="page-header"> Create a new Category!</h1>
 
   <%= form_for [:admin, @category] do |form| %>
 
+  <div class="form-group">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class:"form-control" %>
+  </div>
 
   <% end %>
