--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -29,16 +29,16 @@
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
             <span class="text-danger">
-              <%= fa_icon 'lock'%></span>
-              <% if current_user %>
-                <span>Signed in as <%= current_user.first_name %> | <%=link_to "Logout", '/logout'%> </span>
-                <% else %>
-                  <span><%= link_to "Login", "/login"%> | <% link_to "Register", "/users/new" %> </span>
-              <% end %>
+              <%= fa_icon 'lock', text: 'Admin'%></span>
             <span class="caret"></span>
           </a>
+          
+          <% if current_user %>
+            <span>Signed in as <%= current_user.first_name %> | <%=link_to "Logout", '/logout'%> </span>
+            <% else %>
+              <span><%= link_to "Login", "/login"%> | <%= link_to "Register", "/users/new" %> </span>
+          <% end %>
           <ul class="dropdown-menu">
             <li><%= link_to 'Dashboard', [:admin, :root] %></li>
             <li><%= link_to 'Products',  [:admin, :products] %></li>
