--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,29 +6,31 @@
 
 <%= form_for @user do |form| %>
 
-  <%= form.label :first_name %>
-  <%= form.text_field :first_name %>
+  <div class="form-group">
+    <%= form.label :first_name %>
+    <%= form.text_field :first_name, class: "form-control" %>
+  </div>
 
-  <br />
+  <div class="form-group">
+    <%= form.label :last_name %>
+    <%= form.text_field :last_name, class: "form-control" %>
+  </div>
 
-  <%= form.label :last_name %>
-  <%= form.text_field :last_name %>
+  <div class="form-group">
+    <%= form.label :email %>
+    <%= form.text_field :email, class: "form-control" %>
+  </div>
 
-  <br />
+  <div class="form-group">
+    <%= form.label :password %>
+    <%= form.password_field :password, class: "form-control"%>
+  </div>
 
-  <%= form.label :email %>
-  <%= form.text_field :email %>
+  <div class="form-group">
+    <%= form.label :password_confirmation %>
+    <%= form.password_field :password_confirmation, class: "form-control" %>
+  </div>
 
-  <br />
-
-  <%= form.label :password %>
-  <%= form.password_field :password %>
-
-  <%= form.label :password_confirmation %>
-  <%= form.password_field :password_confirmation %>
-
-  <br />
-
-  <%= form.submit :submit %>
+  <%= form.submit :submit, class: "btn btn-primary" %>
 
 <% end %>
