--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,12 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if @cart.length == 0 %>
+    <span>There are currently no items in your cart! Please add an item.</span>
+    <%= link_to "Back to Home", "/" %>
+
+  <% else %>>
+
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -49,5 +55,7 @@
       <% end %>
     </div>
   </div>
+
+  <% end %>
 
 </section>
