--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,7 +8,7 @@
     <span>There are currently no items in your cart! Please add an item.</span>
     <%= link_to "Back to Home", "/" %>
 
-  <% else %>>
+  <% else %>
 
   <div class="panel panel-default items">
     <table class="table table-bordered">
