Added Review migration and seed data. Had test review show up on correct page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,6 +26,24 @@
       </div>
     </div>
 
+    <div class='reviews'>
+      <% @reviews.each do |review| %>
+        <div>
+
+          <div>
+            User Name: <%= review.user.first_name %>
+          </div>
+          <div>
+            Rating: <%= review.rating %> / 5
+          </div>
+          <div>
+            Review: <%= review.description %>
+          </div>
+
+        </div>
+      <% end %>
+    </div>
+
   </article>
 
 </section>
