--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,6 +26,32 @@
       </div>
     </div>
 
+    <% if current_user %>
+    <span> Write a Review! </span>
+
+    <%= form_for :review, url: @revurl do |form| %>
+
+      <div class="form-group">
+        <%= form.label :description %>
+        <%= form.text_area :description, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :rating %>
+        <%= form.select :rating, [["5*", 5], ["4*", 4], ["3*", 3], ["2*", 2], ["1*", 1], ["0*", 0]] %>
+      </div>
+
+      <%= form.submit %>
+      <% end %>
+
+    <% else %>
+
+      <span>Log-In to Write a Review!</span>
+
+    <% end %>
+
+    <br />
+
     <div class='reviews'>
       <% @reviews.each do |review| %>
         <div>
@@ -39,6 +65,8 @@
           <div>
             Review: <%= review.description %>
           </div>
+
+          <br />
 
         </div>
       <% end %>
