Added orders show page CSS

--- a/app/views/order_mailer/order_email.html.erb
+++ b/app/views/order_mailer/order_email.html.erb
@@ -16,7 +16,7 @@
 </ul>
 
 <p>
-  Your total was: <%= order.total_price_cents %>
+  Your total was: <%= @order.total_cents %>
 </p>
 
 <span>Thank you for Shopping with us! :)</span>
