--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -2,9 +2,11 @@
 
   <%= form_for [:admin, @category] do |form| %>
 
-  <div class="form-group">
-    <%= form.label :name %>
-    <%= form.text_field :name, class:"form-control" %>
+  <div class="form-group row">
+    <div class="col-md-4">
+      <%= form.label :name %>
+      <%= form.text_field :name, class:"form-control" %>
+    </div>
   </div>
 
   <% end %>
