--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -33,7 +33,7 @@
               <%= fa_icon 'lock', text: 'Admin'%></span>
             <span class="caret"></span>
           </a>
-          
+
           <% if current_user %>
             <span>Signed in as <%= current_user.first_name %> | <%=link_to "Logout", '/logout'%> </span>
             <% else %>
@@ -42,6 +42,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to 'Dashboard', [:admin, :root] %></li>
             <li><%= link_to 'Products',  [:admin, :products] %></li>
+            <li><%= link_to 'Categories', [:admin, :categories] %></li>
           </ul>
         </li>
         <li>
