--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,36 +53,7 @@
     <br />
 
     <div class='reviews'>
-      <% @reviews.each do |review| %>
-        <% if current_user == nil %>
-          <div>
-            <div>
-              User Name: <%= review.user.first_name %>
-            </div>
-            <div>
-              Rating: <%= review.rating %> / 5
-            </div>
-            <div>
-              Review: <%= review.description %>
-            </div>
-          </div>
-
-        <% elsif current_user.id == review.user.id %>
-          <div>
-            <div>
-              User Name: <%= review.user.first_name %>
-            </div>
-            <div>
-              Rating: <%= review.rating %> / 5
-            </div>
-            <div>
-              Review: <%= review.description %>
-            </div>
-            <%= link_to fa_icon('trash'), product_review_path(@product, review), class: 'btn btn-sm btn-danger', method: :delete%>
-          </div>
-        <% end %>
-      <br />
-    <% end %>
+      <%= render @reviews %>
     </div>
 
   </article>
