--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,31 +6,41 @@
 
 <%= form_for @user do |form| %>
 
-  <div class="form-group">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name, class: "form-control" %>
-  </div>
+      <div class="form-group row">
+        <div class="col-md-6">
+          <%= form.label :first_name %>
+          <%= form.text_field :first_name, class: "form-control" %>
+        </div>
+      </div>
 
-  <div class="form-group">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name, class: "form-control" %>
-  </div>
+      <div class="form-group row">
+        <div class="col-md-6">
+          <%= form.label :last_name %>
+          <%= form.text_field :last_name, class: "form-control" %>
+        </div>
+      </div>
 
-  <div class="form-group">
-    <%= form.label :email %>
-    <%= form.text_field :email, class: "form-control" %>
-  </div>
+      <div class="form-group row">
+        <div class ="col-md-6">
+          <%= form.label :email %>
+          <%= form.text_field :email, class: "form-control" %>
+        </div>
+      </div>
 
-  <div class="form-group">
-    <%= form.label :password %>
-    <%= form.password_field :password, class: "form-control"%>
-  </div>
+      <div class="form-group row">
+        <div class="col-md-6">
+          <%= form.label :password %>
+          <%= form.password_field :password, class: "form-control"%>
+        </div>
+      </div>
 
-  <div class="form-group">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation, class: "form-control" %>
-  </div>
+      <div class="form-group row">
+        <div class="col-md-6">
+          <%= form.label :password_confirmation %>
+          <%= form.password_field :password_confirmation, class: "form-control" %>
+        </div>
+      </div>
 
-  <%= form.submit :submit, class: "btn btn-primary" %>
+      <%= form.submit :Submit, class: "btn btn-primary" %>
 
 <% end %>
