Fixed up a few more CSS tweaks

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -23,7 +23,7 @@
 
   <% if product.reviews.length != 0 %>
     <p class="average-rating">
-      Average User Rating: <%=product.reviews.average(:rating)%>
+      Average User Rating: <%=product.reviews.average(:rating)%> / 5
     </p>
   <% end %>
 
