--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -41,13 +41,13 @@
         <%= form.select :rating, [["5*", 5], ["4*", 4], ["3*", 3], ["2*", 2], ["1*", 1], ["0*", 0]] %>
       </div>
 
-      <%= form.submit %>
+      <%= form.submit "Submit Review", class: "btn btn-primary" %>
       <% end %>
 
     <% else %>
 
       <div class="row">
-        <div class = "col-md-6">
+        <div class = "jumbotron col-md-3 col-md-offset-4">
             <%= link_to "Log-In", "/login" %> to write a review!
         </div>
       </div>
